<resources>
    <string name="app_name">Ex-Machina</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_actual_user">Accueil</string>
    <string name="menu_Edit_Filiere">Changer de Filière</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_infos">Informations</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_deco">Se Déconnecter</string>

    <string name="conditions_utilisation">En Continuant, vous reconnaissez avoir lu et accepté </string>
    <string name="conditions">les conditions générales d\'utilisation <u>underline</u></string>
    <string name="facebook_app_id">705444369887199</string>
    <string name="fb_login_protocol_scheme">fb705444369887199</string>
    <string name="title_activity_base_shared">BaseSharedActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="next">Suivant</string>
    <string name="skip">Passer</string>
    <string name="start">Commencer</string>
    <string name="title_slide1">Ex-Machina</string>
    <string name="desc_slide1">Club Universitaire Scientifique qui regroupe des étudiants de l\'école d\'ingénierie de l\'Université Internationale de Casablanca</string>
    <string name="title_slide2">Par,pour les étudiants</string>
    <string name="desc_slide2">Retrouvez tous les supports de cours </string>
    <string name="title_slide3">Au service des étudiants</string>
    <string name="desc_slide3">L\'application qui vous aide tout au long de votre cursus universitaire</string>
    <string name="home">HOME</string>
</resources>
